started making pages responsive with media queries

--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -3,16 +3,15 @@
         University Education
     </h1>
     <div class="education-container">
-        <div class="card" style="width: 50%; border: none;">
-            <div class="row">
-              <div class="col">
-                <img src="../assets/images/educationimages/unhlogo.png" style="display: block; margin: auto;" class="img-fluid center-block">
-              </div>
-              <div class="col">
-                <div class="card-body">
-                    <h1 class="card-title">Bachelor of Science in <br>Computer Science</h1>
+        <div class="education-card">
+            <div style="min-width: 25%;">
+                <img src="../assets/images/educationimages/unhlogo.png" width="250px" style="display: block; margin: auto;">
+            </div>
+            <div class="education-card-col">
+                <div style="margin-left: 1rem; margin-right: 1rem;">
+                    <h1 class="education-title">Bachelor of Science in Computer Science</h1>
                     <h3 class="education-sub-title">University of New Haven 2021</h3>
-                    <p class="card-text">
+                    <p class="education-text">
                         • Data Structures and Algorithms<br>
                         • Discrete Mathematics for Computing<br>
                         • Algorithm Design and Analysis<br>
@@ -21,60 +20,55 @@
                         • Calculus I, Calculus II, Linear Algebra<br>
                     </p>
                 </div>
-              </div>
             </div>
-          </div>
+        </div>
     </div>
     <hr class="hr-breaker">
     <h1 class="education-container main-headings">
         Software Development Training
     </h1>
     <div class="education-container">
-        <div class="card" style="width: 50%; border: none;">
-            <div class="row">
-                <div class="col">
-                    <img src="../assets/images/educationimages/revaturelogo.png" width="316px" style="display: block; margin: auto;" class="img-fluid center-block">
-                </div>
-                <div class="col">
-                    <div class="card-body">
-                        <h1 class="card-title">.NET Full-Stack<br>Training</h1>
-                        <h3 class="education-sub-title">Revature 2022</h3>
-                        <p class="card-text">
-                            • ADO.NET<br>
-                            • ASP.NET Web API<br>
-                            • C# & Angular (HTML, CSS, TS)<br>
-                            • T-SQL<br>
-                            • Microsoft Azure<br>
-                            • Github, DBeaver, Bootstrap, SonarCloud<br>
-                        </p>
-                    </div>
+        <div class="education-card">
+            <div style="min-width: 25%;">
+                <img src="../assets/images/educationimages/revaturelogo.png" width="250px" style="display: block; margin: auto;">
+            </div>
+            <div class="education-card-col">
+                <div style="margin-left: 1rem; margin-right: 1rem;">
+                    <h1 class="education-title">.NET Full-Stack Training</h1>
+                    <h3 class="education-sub-title">Revature 2022</h3>
+                    <p class="education-text">
+                        • ADO.NET<br>
+                        • ASP.NET Web API<br>
+                        • C# & Angular (HTML, CSS, TS)<br>
+                        • T-SQL<br>
+                        • Microsoft Azure<br>
+                        • Github, DBeaver, Bootstrap, SonarCloud<br>
+                    </p>
                 </div>
             </div>
-          </div>
+        </div>
     </div>
     <hr class="hr-breaker">
     <h1 class="education-container main-headings">
         Other Education/Training
     </h1>
     <div class="education-container">
-        <div class="card" style="width: 50%; border: none;">
-            <div class="row">
-                <div class="col">
-                    <img src="../assets/images/educationimages/nedive.png" width="316px" style="display: block; margin: auto;" class="img-fluid center-block">
-                </div>
-                <div class="col">
-                    <div class="card-body">
-                        <h1 class="card-title">SDI Open Water<br>Scuba Certification</h1>
-                        <h3 class="education-sub-title">New England Dive 2022</h3>
-                        <p class="card-text">
-                            • SDI Online Academic Course<br>
-                            • Confined Water Training<br>
-                            • Open Water Training<br>
-                        </p>
-                    </div>
+        <div class="education-card">
+            <div style="min-width: 25%;">
+                <img src="../assets/images/educationimages/nedive.png" width="250px" style="display: block; margin: auto;">
+            </div>
+            <div class="education-card-col">
+                <div style="margin-left: 1rem; margin-right: 1rem;">
+                    <h1 class="education-title">SDI Open Water Scuba Certification</h1>
+                    <h3 class="education-sub-title">New England Dive 202</h3>
+                    <p class="education-text">
+                        • SDI Online Academic Course<br>
+                        • Confined Water Training<br>
+                        • Open Water Training<br>
+                    </p>
                 </div>
             </div>
-          </div>
+        </div>
     </div>
     <app-footer></app-footer>
 </div>
