--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="card project-border">
             <div class="card-body projects-heading">
-                <h5 class="card-title">My 2 Cents Banking/Investing</h5>
+                <h5 class="card-title">My 2 Cents Banking & Investing</h5>
             </div>
             <a class="projects-link" routerLink="/my2cents">
                 <img src="../assets/images/projects/my2centsproj/my2centssmall.png" width="100%" class="projects-img-border">
