--- a/src/app/education/education.component.css
+++ b/src/app/education/education.component.css
@@ -2,17 +2,34 @@
 {
     margin-top: 3rem;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+}
+
+.education-card
+{
+    display: flex;
+}
+
+.education-card-col
+{
+    flex-direction: column;
 }
 
 .main-headings
 {
-    font-size: 4rem;
+    text-align: center;
+    word-break: keep-all;
+}
+
+.education-title
+{
+    word-break: keep-all;
 }
 
 .education-sub-title
 {
     font-weight: normal;
+    word-break: keep-all;
 }
 
 .hr-breaker
@@ -20,3 +37,53 @@
     margin-top: 3rem; 
     height: 0.25rem;
 }
+
+/* media queries for responsive design */
+/* If the screen size is 801px wide or more */
+@media screen and (min-width: 801px) {
+    .main-headings
+    {
+      font-size: 64px;
+    }
+    .education-title
+    {
+        font-size: 32px;
+    }
+    .education-sub-title
+    {
+        font-size: 24px;
+    }
+    .education-text
+    {
+        font-size: 18px;
+    }
+    .education-card
+    {
+        flex-direction: row;
+    }
+  }
+  
+  /* If the screen size is 800px wide or less */
+  @media screen and (max-width: 800px) {
+    .main-headings
+    {
+      font-size: 32px;
+    }
+    .education-title
+    {
+        font-size: 24px;
+    }
+    .education-sub-title
+    {
+        font-size: 18px;
+    }
+    .education-text
+    {
+        font-size: 12px;
+    }
+    .education-card
+    {
+        flex-direction: column;
+        text-align: center;
+    }
+  }
