about me page is now responsive

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -73,7 +73,7 @@
 <div [@fadeInState]="fadeIn">
     <h3 class="projects-heading">Personal Favorite Projects</h3>
     <div class="card-group projects-container">
-        <div class="card projects-margin">
+        <div class="card projects-margin" style="border: none;">
             <a class="projects-link" routerLink="/calculator">
                 <img src="../assets/images/projects/simplecalcproj/calcProject.png" width="100%" class="projects-img-border">
             </a>
@@ -83,7 +83,7 @@
                 +/- integers or decimals. You can also backspace if you make a typo and clear the calculator.</p>
             </div>
         </div>
-        <div class="card projects-margin">
+        <div class="card projects-margin" style="border: none;">
             <a class="projects-link" routerLink="/my2cents">
                 <img src="../assets/images/projects/my2centsproj/my2cents.png" width="100%" class="projects-img-border">
             </a>
@@ -95,7 +95,7 @@
             </p>
           </div>
         </div>
-        <div class="card projects-margin">
+        <div class="card projects-margin" style="border: none;">
             <a class="projects-link" routerLink="/marsproj">
                 <img src="../assets/images/projects/marsroverproj/marsroverimg.png" class="card-img-top projects-img-border">
             </a>
@@ -109,5 +109,4 @@
           </div>
         </div>
     </div>
-    <app-footer></app-footer>
 </div>
