--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -14,12 +14,6 @@
     font-family:sans-serif;
 }
 
-.home-box-fill
-{
-    color: #000;
-    margin-bottom: -3rem;
-}
-
 .home-img
 {
     width: 100%;
@@ -84,8 +78,9 @@
 
 .projects-margin
 {
-    border: none;
-    margin-right: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    justify-content: center;
 }
 
 .projects-link:hover
@@ -191,16 +186,19 @@
     {
         display: flex;
         flex-direction: column;
+        height: 100%;
+        margin-left: 1rem;
+        margin-right: 1rem;
     }
     .box-main-text
     {
-        margin-bottom: 2rem;
-        font-size: 4rem;
+        font-size: 3rem;
+        margin: auto;
     }
     .box-sub-text
     {
-        margin-bottom: 2rem;
-        font-size: 4rem;
+        font-size: 3rem;
+        margin: auto;
     }
     .projects-heading::before
     {
