--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,8 @@
+<div>
+  <Label>"NOTICE: the portfolio page is not responsive and looks bad on smaller devices. I work full time haven't had the time to update it yet. Don't make fun of me :)</label>
+  <button (click)="showHideAlert()">OKAY</button> 
+</div>
+
 <div class="home-container">
     <div [@transitionLeftState]="transition" class="home-box home-box-fill">
         <span [@rubberBandState]="adventureStateA" class="box-main-text" 
